--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ before_install:
     - mysql -uroot -e "grant all on belajar.* to test@localhost identified by 'java'"
     - mysql -uroot -e "drop database if exists belajar"
     - mysql -uroot -e "create database belajar"
+
+after_success:
+    - mvn jacoco:report coveralls:report
