--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/belajar
+spring.datasource.username=test
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.datasource.url=jdbc:postgresql://ec2-107-20-148-211.compute-1.amazonaws.com:5432/daail20r10af8s
-spring.datasource.username=qkcmsytezjitne
-spring.datasource.password=nuSBGAraQiQznf5XyDnUNOQMnR
-
-flyway.locations=classpath:db/migration/postgresql
+flyway.locations=classpath:db/migration/mysql
